--- a/style/main.css
+++ b/style/main.css
@@ -320,39 +320,39 @@ hr {
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
-    background: url('../img/2.jpg'');
+    background: url('../img/2.jpg');
     background-size: 100% 100%;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
     background: #f2b179; 
-    background: url('../img/3.jpg'');
+    background: url('../img/3.jpg');
     background-size: 100% 100%;
   }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
     background: #f59563; 
-    background: url('../img/4.jpg'');
+    background: url('../img/4.jpg');
     background-size: 100% 100%;
   }
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
     background: #f67c5f; 
-    background: url('../img/5.jpg'');
+    background: url('../img/5.jpg');
     background-size: 100% 100%;
   }
   
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
     background: #f65e3b; 
-   background: url('../img/6.jpg'');
+   background: url('../img/6.jpg');
    background-size: 100% 100%;
   }
   
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
     background: #edcf72;
-    background: url('../img/7.jpg'');
+    background: url('../img/7.jpg');
 
 background-size: 100% 100%;    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
@@ -372,7 +372,7 @@ background-size: 100% 100%;    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
     background: #edc850;
-    background: url('../img/9.jpg'');
+    background: url('../img/9.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
@@ -381,7 +381,7 @@ background-size: 100% 100%;    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
     background: #edc53f;
-    background: url('../img/10.jpg'');
+    background: url('../img/10.jpg');
      background-size: 100% 100%;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
@@ -391,7 +391,7 @@ background-size: 100% 100%;    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2
   .tile.tile-2048 .tile-inner {
     color: #f9f6f2;
     background: #edc22e;
-    background: url('../img/11.jpg'');
+    background: url('../img/11.jpg');
     background-size: 100% 100%;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
