--- a/style/main.css
+++ b/style/main.css
@@ -373,6 +373,7 @@ background-size: 100% 100%;    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2
     color: #f9f6f2;
     background: #edc850;
     background: url('../img/9.jpg');
+    background-size: 100% 100%;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
